# cpp_starter_kit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: codecov.cmake
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_1.cpp
